--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,3 +2,12 @@ body {
   font-family: 'Roboto', sans-serif;
   background-color: #F5F5FF;
 }
+
+.kegCard {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30%;
+  padding: 5%;
+  height: 30%;
+}
