--- a/src/components/App.css
+++ b/src/components/App.css
@@ -7,7 +7,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 30%;
-  padding: 5%;
-  height: 30%;
+  width: 28%;
+  padding: 3%;
+  margin: 3%;
+  height: 28%;
 }
